Enable configuration for aws-route53 zones in seeds

--- a/components/gardencontent/seeds/manifests/seed_manifests.yaml
+++ b/components/gardencontent/seeds/manifests/seed_manifests.yaml
@@ -110,6 +110,7 @@ ingressTemplate:
         secretRef:
           name: (( configValues.secretname "-ingress-dns-secret" ))
           namespace: (( configValues.namespace ))
+        zones: (( configValues.dns.hostedZoneIDs ))
     ingress:
       domain: (( configValues.seed.ingressdomain ))
       controller:
